# rust-sorted

./: Cargo.toml  README.md  lib.rs
